# openad-plugin-rxn

./: .gitignore  README.md  plugin_rxn_demo.ipynb  pyproject.toml  test-plugin.ipynb  test.py
.ipynb_checkpoints/: test-plugin-checkpoint.ipynb
_overview_TRASH/: command.py
openad_plugin_ds/: main.py  plugin_grammar.py  plugin_grammar_def.py  plugin_login.py  plugin_msg.py  plugin_params.py
openad_plugin_ds/commands/display_all_collections/: command.py  description.py  display_all_collections.py
openad_plugin_ds/commands/display_all_domains/: command.py  display_all_domains.py
openad_plugin_ds/commands/display_collection_details/: command.py  description.py  display_collection_details.py
openad_plugin_ds/commands/display_collection_matches/: command.py  description.py  display_collection_matches.py
openad_plugin_ds/commands/display_collections_for_domain/: command.py  description.py  display_collections_for_domain.py
openad_plugin_ds/commands/find_mols_in_patents/: command.py  description.py  find_mols_in_patents.py
openad_plugin_ds/commands/find_mols_similar/: command.py  description.py  find_mols_similar.py
openad_plugin_ds/commands/find_mols_substruct/: command.py  description.py  (+1 more)
openad_plugin_rxn/: plugin_description.txt  plugin_grammar_def.py  plugin_login copy.py  plugin_login.py  plugin_master_class.py  plugin_metadata.json  plugin_metadata.yaml  plugin_msg.py  plugin_params.py  rxn_helper.py
testing/: test-plugin-rxn.ipynb  test-plugin-rxn.run  test-plugin.ipynb  test_plugin_rxn.run
testing/files/: my_reactions.csv  my_recipe.txt
(+61 files in other folders)
