[tool.poetry]
name = "openad_plugin_rxn"
version = "0.0.1"
description = "Digital Chemical Synthesis"
keywords= ["rxn", "openad", "ibm", "research", "molecule", "chemistry", "synthesis", "reaction", "retrosynthesis"]
authors = [
  "Moenen Erbuer <moenen.erbuer@ibm.com>",
]
maintainers = [
  "Moenen Erbuer <moenen.erbuer@ibm.com>",
  "Phil Downey <phil.downey1@ibm.com>"
]
homepage = "https://ds4sd.github.io/"
documentation = "https://github.com/DS4SD/deepsearch-toolkit"
repository = "https://github.com/DS4SD"
readme = "README.md"
license = "MIT"
classifiers = [
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Typing :: Typed",
    "Programming Language :: Python :: 3.11"
]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
openad_tools = { git = "ssh://git@github.com/acceleratedscience/openad-tools", tag = "v0.0.1" }




########## Do not below this line ##########




[tool.black]
line-length=120

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"